--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,1 @@
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51259/railway
-spring.datasource.username=root
-spring.datasource.password=WiixDvGLxIpaCjqEEJrWenurNfhausWv
-
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=mysql://root:WiixDvGLxIpaCjqEEJrWenurNfhausWv@monorail.proxy.rlwy.net:51259/railway
