--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,5 @@
-spring.datasource.url=mysql://root:WiixDvGLxIpaCjqEEJrWenurNfhausWv@monorail.proxy.rlwy.net:51259/railway
+spring.datasource.url=jdbc:mysql://root:WiixDvGLxIpaCjqEEJrWenurNfhausWv@monorail.proxy.rlwy.net:51259/railway
+spring.datasource.username=root
+spring.datasource.password=WiixDvGLxIpaCjqEEJrWenurNfhausWv
+
+spring.jpa.hibernate.ddl-auto=update
